# errbase

./: .env  .env.example  .gitignore  .mcp.json  LIFECYCLE_IMPLEMENTATION.md  README.md  errbase.plugin.zsh  pyproject.toml
errbase/: __init__.py  __main__.py  benchmark.py  cli.py  cognee_brain.py  mcp_server.py  seed.py
