[project]
name = "errbase"
version = "0.1.0"
description = "Your terminal remembers the fix. Graph memory via Cognee + Mistral."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7",
]

[project.optional-dependencies]
# The graph brain. Install with:  pip install "errbase[graph]"
graph = [
    "cognee[mistral]>=1.0",
]

[project.scripts]
errbase = "errbase.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["errbase"]
