[project]
name = "errbase"
version = "0.2.0"
description = "Your terminal remembers the fix. remember/recall/improve/forget over Cognee Cloud — CLI + MCP server for LLM agents."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "rich>=13.7",
]

[project.urls]
Homepage = "https://github.com/cy873rr10r/errbase"
Repository = "https://github.com/cy873rr10r/errbase"

[project.optional-dependencies]
# Expose errbase to LLM agents (Claude Code, etc.) as an MCP server.
mcp = [
    "mcp[cli]>=1.0",
]

[project.scripts]
errbase = "errbase.cli:main"
errbase-mcp = "errbase.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["errbase"]
